[gd_scene load_steps=67 format=3 uid="uid://bhghm74u2o8ik"]

[ext_resource type="ButtonGroup" uid="uid://ccxcutyn7ifmw" path="res://components/editor/tools_group.tres" id="1_88smh"]
[ext_resource type="Script" uid="uid://b7rs4os6wj4cs" path="res://components/editor/editor.gd" id="1_wb1k2"]
[ext_resource type="Script" uid="uid://bj4k70ax17xpx" path="res://components/spin_foc.gd" id="2_ikoqp"]
[ext_resource type="Script" uid="uid://bd1geqidfj4fx" path="res://components/editor/grid_lines.gd" id="2_jsp0s"]
[ext_resource type="Texture2D" uid="uid://bkq4iy7vqadw3" path="res://assets/cmode/inv.svg" id="2_od75m"]
[ext_resource type="ButtonGroup" uid="uid://c6kxtnnl4kyma" path="res://components/editor/cmode_group.tres" id="2_qbssp"]
[ext_resource type="Texture2D" uid="uid://3q48hfg0mxcv" path="res://assets/cmode/cell.svg" id="3_gnkst"]
[ext_resource type="Texture2D" uid="uid://bwgdu8vufmqcl" path="res://assets/cmode/t.svg" id="6_mqen1"]
[ext_resource type="Texture2D" uid="uid://qef2nehtarn1" path="res://assets/cmode/f.svg" id="7_ukwbh"]
[ext_resource type="Texture2D" uid="uid://csbivr00slmx4" path="res://assets/cmode/default.svg" id="8_dxryl"]
[ext_resource type="Script" uid="uid://cmf158hy1yp5d" path="res://components/editor/grid.gd" id="9_8b0ie"]

[sub_resource type="InputEventAction" id="InputEventAction_2r100"]
action = &"bited_prev_uc"

[sub_resource type="Shortcut" id="Shortcut_vypbe"]
events = [SubResource("InputEventAction_2r100")]

[sub_resource type="InputEventAction" id="InputEventAction_bu2ic"]
action = &"bited_prev_glyph"

[sub_resource type="Shortcut" id="Shortcut_ct5mg"]
events = [SubResource("InputEventAction_bu2ic")]

[sub_resource type="InputEventAction" id="InputEventAction_weubm"]
action = &"bited_next_glyph"

[sub_resource type="Shortcut" id="Shortcut_7okrq"]
events = [SubResource("InputEventAction_weubm")]

[sub_resource type="InputEventAction" id="InputEventAction_k0xwd"]
action = &"bited_next_uc"

[sub_resource type="Shortcut" id="Shortcut_r1kjj"]
events = [SubResource("InputEventAction_k0xwd")]

[sub_resource type="InputEventAction" id="InputEventAction_osuyi"]
action = &"bited_move"

[sub_resource type="Shortcut" id="Shortcut_kyc1p"]
events = [SubResource("InputEventAction_osuyi")]

[sub_resource type="InputEventAction" id="InputEventAction_43gh8"]
action = &"bited_pen"

[sub_resource type="Shortcut" id="Shortcut_lgybh"]
events = [SubResource("InputEventAction_43gh8")]

[sub_resource type="InputEventAction" id="InputEventAction_fkyn5"]
action = &"bited_line"

[sub_resource type="Shortcut" id="Shortcut_el2rj"]
events = [SubResource("InputEventAction_fkyn5")]

[sub_resource type="InputEventAction" id="InputEventAction_iqmbl"]
action = &"bited_rect"

[sub_resource type="Shortcut" id="Shortcut_p7pfg"]
events = [SubResource("InputEventAction_iqmbl")]

[sub_resource type="InputEventAction" id="InputEventAction_3cfxf"]
action = &"bited_mode_default"

[sub_resource type="Shortcut" id="Shortcut_ulfqc"]
events = [SubResource("InputEventAction_3cfxf")]

[sub_resource type="InputEventAction" id="InputEventAction_ahsaq"]
action = &"bited_mode_t"

[sub_resource type="Shortcut" id="Shortcut_fvamu"]
events = [SubResource("InputEventAction_ahsaq")]

[sub_resource type="InputEventAction" id="InputEventAction_afy8t"]
action = &"bited_mode_f"

[sub_resource type="Shortcut" id="Shortcut_oxwf8"]
events = [SubResource("InputEventAction_afy8t")]

[sub_resource type="InputEventAction" id="InputEventAction_larhf"]
action = &"bited_mode_inv"

[sub_resource type="Shortcut" id="Shortcut_s1vyv"]
events = [SubResource("InputEventAction_larhf")]

[sub_resource type="InputEventAction" id="InputEventAction_ow1e3"]
action = &"bited_mode_cell"

[sub_resource type="Shortcut" id="Shortcut_8wt2y"]
events = [SubResource("InputEventAction_ow1e3")]

[sub_resource type="ViewportTexture" id="ViewportTexture_iwxi2"]
viewport_path = NodePath("CenterContainer/GridContainer/5/Grid/Lines/SubViewport")

[sub_resource type="InputEventAction" id="InputEventAction_fp0vg"]
action = &"bited_selmode"

[sub_resource type="Shortcut" id="Shortcut_xaubg"]
events = [SubResource("InputEventAction_fp0vg")]

[sub_resource type="InputEventAction" id="InputEventAction_850sg"]
action = &"bited_overwrite"

[sub_resource type="Shortcut" id="Shortcut_ai11x"]
events = [SubResource("InputEventAction_850sg")]

[sub_resource type="InputEventAction" id="InputEventAction_mnipk"]
action = &"bited_stamp"

[sub_resource type="Shortcut" id="Shortcut_850sg"]
events = [SubResource("InputEventAction_mnipk")]

[sub_resource type="InputEventAction" id="InputEventAction_mcj1b"]
action = &"ui_undo"

[sub_resource type="Shortcut" id="Shortcut_8vm0w"]
events = [SubResource("InputEventAction_mcj1b")]

[sub_resource type="InputEventAction" id="InputEventAction_tuttj"]
action = &"ui_redo"

[sub_resource type="Shortcut" id="Shortcut_iofcn"]
events = [SubResource("InputEventAction_tuttj")]

[sub_resource type="InputEventAction" id="InputEventAction_2a0pl"]
action = &"bited_flip_x"

[sub_resource type="Shortcut" id="Shortcut_7qumc"]
events = [SubResource("InputEventAction_2a0pl")]

[sub_resource type="InputEventAction" id="InputEventAction_hjiqe"]
action = &"bited_flip_y"

[sub_resource type="Shortcut" id="Shortcut_w6nfi"]
events = [SubResource("InputEventAction_hjiqe")]

[sub_resource type="InputEventAction" id="InputEventAction_kd23h"]
action = &"bited_rot_ccw"

[sub_resource type="Shortcut" id="Shortcut_ctg0p"]
events = [SubResource("InputEventAction_kd23h")]

[sub_resource type="InputEventAction" id="InputEventAction_poeox"]
action = &"bited_rot_cw"

[sub_resource type="Shortcut" id="Shortcut_ren1t"]
events = [SubResource("InputEventAction_poeox")]

[sub_resource type="InputEventAction" id="InputEventAction_mktlr"]
action = &"bited_left"

[sub_resource type="Shortcut" id="Shortcut_5vium"]
events = [SubResource("InputEventAction_mktlr")]

[sub_resource type="InputEventAction" id="InputEventAction_uhbyo"]
action = &"bited_down"

[sub_resource type="Shortcut" id="Shortcut_vbvjq"]
events = [SubResource("InputEventAction_uhbyo")]

[sub_resource type="InputEventAction" id="InputEventAction_qeac4"]
action = &"bited_up"

[sub_resource type="Shortcut" id="Shortcut_8vv5b"]
events = [SubResource("InputEventAction_qeac4")]

[sub_resource type="InputEventAction" id="InputEventAction_u2sts"]
action = &"bited_right"

[sub_resource type="Shortcut" id="Shortcut_1lpad"]
events = [SubResource("InputEventAction_u2sts")]

[sub_resource type="InputEventAction" id="InputEventAction_xaubg"]
action = &"bited_grid_clr"

[sub_resource type="Shortcut" id="Shortcut_mnipk"]
events = [SubResource("InputEventAction_xaubg")]

[node name="Editor" type="PanelContainer" node_paths=PackedStringArray("grid")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wb1k2")
grid = NodePath("CenterContainer/GridContainer/5/Grid")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 3

[node name="1" type="Control" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="2" type="HBoxContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/GridContainer/2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="prev_uc" type="Button" parent="CenterContainer/GridContainer/2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "prev in table"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_vypbe")
text = "<T"

[node name="prev_glyph" type="Button" parent="CenterContainer/GridContainer/2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "prev defined glyph in table"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_ct5mg")
text = "<G"

[node name="Spacer" type="Control" parent="CenterContainer/GridContainer/2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/GridContainer/2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="is_abs" type="Button" parent="CenterContainer/GridContainer/2/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "dwidth mode: relative"
mouse_default_cursor_shape = 2
theme_type_variation = &"Tool"
toggle_mode = true
text = "W?"
icon_alignment = 1
expand_icon = true

[node name="dwidth" type="SpinBox" parent="CenterContainer/GridContainer/2/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
rounded = true
allow_greater = true
prefix = "o:"
select_all_on_focus = true
script = ExtResource("2_ikoqp")

[node name="Spacer2" type="Control" parent="CenterContainer/GridContainer/2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/GridContainer/2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="next_glyph" type="Button" parent="CenterContainer/GridContainer/2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "next defined glyph in table"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_7okrq")
text = "G>"

[node name="next_uc" type="Button" parent="CenterContainer/GridContainer/2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "next in table"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_r1kjj")
text = "T>"

[node name="3" type="Control" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="4" type="VBoxContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
alignment = 1

[node name="move" type="Button" parent="CenterContainer/GridContainer/4"]
layout_mode = 2
tooltip_text = "move"
mouse_default_cursor_shape = 2
theme_type_variation = &"Tool"
toggle_mode = true
button_group = ExtResource("1_88smh")
shortcut = SubResource("Shortcut_kyc1p")
text = "✥"

[node name="pen" type="Button" parent="CenterContainer/GridContainer/4"]
layout_mode = 2
tooltip_text = "pen"
mouse_default_cursor_shape = 2
theme_type_variation = &"Tool"
toggle_mode = true
button_pressed = true
button_group = ExtResource("1_88smh")
shortcut = SubResource("Shortcut_lgybh")
text = "✎"

[node name="line" type="Button" parent="CenterContainer/GridContainer/4"]
layout_mode = 2
tooltip_text = "line"
mouse_default_cursor_shape = 2
theme_type_variation = &"Tool"
toggle_mode = true
button_group = ExtResource("1_88smh")
shortcut = SubResource("Shortcut_el2rj")
text = "╲"

[node name="rect" type="Button" parent="CenterContainer/GridContainer/4"]
layout_mode = 2
tooltip_text = "rectangle"
mouse_default_cursor_shape = 2
theme_type_variation = &"Tool"
toggle_mode = true
button_group = ExtResource("1_88smh")
shortcut = SubResource("Shortcut_p7pfg")
text = "█"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/GridContainer/4"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="DEFAULT" type="Button" parent="CenterContainer/GridContainer/4"]
texture_filter = 1
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "color mode: default
layer mode: default"
mouse_default_cursor_shape = 2
theme_type_variation = &"CMode"
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_qbssp")
shortcut = SubResource("Shortcut_ulfqc")
icon = ExtResource("8_dxryl")
icon_alignment = 1
expand_icon = true

[node name="T" type="Button" parent="CenterContainer/GridContainer/4"]
texture_filter = 1
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "color mode: draw
layer mode: add"
mouse_default_cursor_shape = 2
theme_type_variation = &"CMode"
toggle_mode = true
button_group = ExtResource("2_qbssp")
shortcut = SubResource("Shortcut_fvamu")
icon = ExtResource("6_mqen1")
icon_alignment = 1
expand_icon = true

[node name="F" type="Button" parent="CenterContainer/GridContainer/4"]
texture_filter = 1
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "color mode: erase
layer mode: subtract"
mouse_default_cursor_shape = 2
theme_type_variation = &"CMode"
toggle_mode = true
button_group = ExtResource("2_qbssp")
shortcut = SubResource("Shortcut_oxwf8")
icon = ExtResource("7_ukwbh")
icon_alignment = 1
expand_icon = true

[node name="INV" type="Button" parent="CenterContainer/GridContainer/4"]
texture_filter = 1
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "color mode: invert
layer mode: exclude"
mouse_default_cursor_shape = 2
theme_type_variation = &"CMode"
toggle_mode = true
button_group = ExtResource("2_qbssp")
shortcut = SubResource("Shortcut_s1vyv")
icon = ExtResource("2_od75m")
icon_alignment = 1
expand_icon = true

[node name="CELL" type="Button" parent="CenterContainer/GridContainer/4"]
texture_filter = 1
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "color mode: first-cell
layer mode: multiply"
mouse_default_cursor_shape = 2
theme_type_variation = &"CMode"
toggle_mode = true
button_group = ExtResource("2_qbssp")
shortcut = SubResource("Shortcut_8wt2y")
icon = ExtResource("3_gnkst")
icon_alignment = 1
expand_icon = true

[node name="5" type="CenterContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2

[node name="Grid" type="PanelContainer" parent="CenterContainer/GridContainer/5" node_paths=PackedStringArray("editor", "node_wrapper", "node_root", "node_sels", "node_view_lines", "node_lines", "node_placeholder", "input_dwidth", "btn_is_abs", "btn_prev_glyph", "btn_next_glyph", "btn_prev_uc", "btn_next_uc", "btn_undo", "btn_redo", "btn_flip_x", "btn_flip_y", "btn_rot_ccw", "btn_rot_cw", "btn_left", "btn_down", "btn_up", "btn_right", "btn_grid_clr", "btn_selmode", "btn_overwrite", "btn_stamp")]
layout_mode = 2
focus_mode = 1
theme_type_variation = &"Grid"
script = ExtResource("9_8b0ie")
editor = NodePath("../../../..")
node_wrapper = NodePath("../..")
node_root = NodePath("Root")
node_sels = NodePath("Sels")
node_view_lines = NodePath("Lines/SubViewport")
node_lines = NodePath("Lines/SubViewport/Node2D")
node_placeholder = NodePath("../../../Placeholder")
input_dwidth = NodePath("../../2/HBoxContainer/dwidth")
tools_group = ExtResource("1_88smh")
cmode_group = ExtResource("2_qbssp")
btn_is_abs = NodePath("../../2/HBoxContainer/is_abs")
btn_prev_glyph = NodePath("../../2/HBoxContainer2/prev_glyph")
btn_next_glyph = NodePath("../../2/HBoxContainer3/next_glyph")
btn_prev_uc = NodePath("../../2/HBoxContainer2/prev_uc")
btn_next_uc = NodePath("../../2/HBoxContainer3/next_uc")
btn_undo = NodePath("../../8/undo")
btn_redo = NodePath("../../8/redo")
btn_flip_x = NodePath("../../8/flip_x")
btn_flip_y = NodePath("../../8/flip_y")
btn_rot_ccw = NodePath("../../8/rot_ccw")
btn_rot_cw = NodePath("../../8/rot_cw")
btn_left = NodePath("../../8/left")
btn_down = NodePath("../../8/down")
btn_up = NodePath("../../8/up")
btn_right = NodePath("../../8/right")
btn_grid_clr = NodePath("../../8/grid_clr")
btn_selmode = NodePath("../../6/selmode")
btn_overwrite = NodePath("../../6/overwrite")
btn_stamp = NodePath("../../6/stamp")

[node name="Root" type="TextureRect" parent="CenterContainer/GridContainer/5/Grid"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
mouse_default_cursor_shape = 3

[node name="Sels" type="TextureRect" parent="CenterContainer/GridContainer/5/Grid"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
mouse_default_cursor_shape = 3

[node name="Lines" type="TextureRect" parent="CenterContainer/GridContainer/5/Grid"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("ViewportTexture_iwxi2")

[node name="SubViewport" type="SubViewport" parent="CenterContainer/GridContainer/5/Grid/Lines"]
disable_3d = true
transparent_bg = true
size = Vector2i(256, 256)

[node name="Node2D" type="Node2D" parent="CenterContainer/GridContainer/5/Grid/Lines/SubViewport" node_paths=PackedStringArray("grid")]
script = ExtResource("2_jsp0s")
grid = NodePath("../../..")

[node name="6" type="VBoxContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="selmode" type="Button" parent="CenterContainer/GridContainer/6"]
layout_mode = 2
tooltip_text = "toggle layer 1"
mouse_default_cursor_shape = 2
theme_type_variation = &"Tool"
toggle_mode = true
shortcut = SubResource("Shortcut_xaubg")
text = ":1"

[node name="overwrite" type="Button" parent="CenterContainer/GridContainer/6"]
layout_mode = 2
tooltip_text = "overwrite"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_ai11x")
text = "✍"

[node name="stamp" type="Button" parent="CenterContainer/GridContainer/6"]
layout_mode = 2
tooltip_text = "stamp"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_850sg")
text = "🖃"

[node name="7" type="Control" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="8" type="HBoxContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="undo" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "undo"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_8vm0w")
text = "⮪"

[node name="redo" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "redo"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_iofcn")
text = "⮫"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="flip_x" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "flip horiz"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_7qumc")
text = "🡘"

[node name="flip_y" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "flip vert"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_w6nfi")
text = "🡙"

[node name="rot_ccw" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "rotate ccw"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_ctg0p")
text = "⟲"

[node name="rot_cw" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "rotate cw"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_ren1t")
text = "⟳"

[node name="VSeparator2" type="VSeparator" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="left" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "left 1px"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_5vium")
text = "🡐"

[node name="down" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "down 1px"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_vbvjq")
text = "🡓"

[node name="up" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "up 1px"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_8vv5b")
text = "🡑"

[node name="right" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "right 1px"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_1lpad")
text = "🡒"

[node name="VSeparator3" type="VSeparator" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="grid_clr" type="Button" parent="CenterContainer/GridContainer/8"]
layout_mode = 2
tooltip_text = "clear"
mouse_default_cursor_shape = 2
theme_type_variation = &"Op"
shortcut = SubResource("Shortcut_mnipk")
text = "⎚"

[node name="Placeholder" type="Label" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"Muted"
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 32
text = "select a glyph to start..."
horizontal_alignment = 1
vertical_alignment = 1
